# Molinete-AI

./: .gitignore  Cargo.toml  DATA.md  README.md  download_data.py  main.py  pyproject.toml  requirements.txt
docs/: 01_TOKENIZATION.md  02_TENSOR_OPERATIONS.md  03_MODEL_ARCHITECTURE.md  04_TRAINING.md  05_TRAINING_EXAMPLES.md  DATA.md  README.md  REFERENCIA.md
ejemplos/: REFERENCIA.md
ejemplos/modulos/: arquitectura.py  chat.py  datos.py  entrenamiento.py  infraestructura.py  tensores.py  tokenizadores.py  ui.py
examples/: 00_descargar_corpus.py  01_presets_pequenos.py  01_train_tokenizers.rs  02_arquitectura_personalizada.py  02_tensor_operations.rs  03_model_architecture.rs  04_training_infrastructure.rs  05_train_cervantes.rs  05_train_cervantes_tiny.rs  05_train_gpt_2_cervantes.rs  06_promting.rs  06_train_cervantes_small.rs  07_train_cervantes_medium.rs  08_train_cervantes_gpt2.rs  README.md  REFERENCIA.md  datos.py  molineteai.py  tokenizadores.py  ui.py
examples/modulos/: arquitectura.py  chat.py  entrenamiento.py  infraestructura.py  tensores.py
presentación/: README.md  colores.py  main.py  objetos.py  presentacion.html  snippets.py
presentación/slides/: __init__.py  slides_00_inicio.py  slides_03_tokenizacion.py  slides_04_embeddings.py  slides_05_atencion.py  slides_06_mlp.py  slides_07_entrenamiento.py  slides_08_final.py
presentation/: README.md  archivo.py  base.py  colores.py  compilar.py  comprimir.py  descomprimir.py  gauss.py  main.py  objetos.py  requirements.txt  snippets.py
presentation/portable/: README.md  normalizar_rutas.py
presentation/slides/: __init__.py  _helpers.py  slide_activacion.py  slide_adam.py  slide_arquitectura_neurona.py  slide_backpropagation.py  slide_byte_pair_encoding.py  slide_cache_blocking.py  slide_capa_transformer.py  slide_conteo_parametros.py  slide_credits.py  slide_descenso_gradiente.py  slide_dropout.py  slide_embeddings.py  slide_entrenamiento.py  slide_final.py  slide_introduction.py  slide_layer_normalization.py  slide_matmul.py  slide_mha_acto1_intuicion.py  slide_mha_acto2_qkv.py  slide_mha_acto3_formula_y_flujo.py  slide_mha_acto4_multihead.py  slide_model_in_action.py  slide_molinete_ai.py  slide_parallel.py  slide_por_que_rust.py  slide_position_embeddings.py  slide_problema_strawberry.py  slide_pronto_iniciamos.py  slide_que_es_transformer.py  slide_que_es_un_tensor.py  slide_residual.py  slide_roadmap.py  slide_rust_python_bridge.py  slide_simd.py  slide_softmax.py  slide_strides.py  slide_temperature.py  slide_tokenizacion.py  (+10 more)
presentation/slides/slides_00_inicio/: __init__.py  slide_credits.py  slide_introduction.py  slide_pronto_iniciamos.py
presentation/slides/slides_01_intro/: __init__.py  slide_molinete_ai.py  slide_por_que_rust.py  slide_que_es_transformer.py  slide_roadmap.py
presentation/slides/slides_02_tensores/: __init__.py  slide_batched_matmul.py  slide_cache_blocking.py  slide_matmul.py  slide_parallel.py  slide_que_es_un_tensor.py  slide_simd.py  slide_softmax.py  slide_strides.py
presentation/slides/slides_03_tokenizacion/: __init__.py  slide_byte_pair_encoding.py  slide_problema_strawberry.py  slide_tokenizacion.py
presentation/slides/slides_04_embeddings/: __init__.py  (+3 more)
src/: entrenamiento.rs  gpt2_entrenable.rs  gradientes.rs  gradients.rs  lib.rs  modelo.rs  optimizador.rs  python_bindings.rs  registrador_entrenamiento.rs  tensor.rs  tokenizador.rs  tokenizer.rs  train.rs  training_logger.rs
src/layers/: activation.rs  attention.rs  block.rs  dropout.rs  layer_norm.rs  linear.rs  mlp.rs  mod.rs
static/css/: style.css
static/js/: app.js
templates/: index.html
web/: index.html  runner.py  server.py
web/css/: base.css
web/js/: arch.js  chat.js  comp.js  config.js  dom.js  learn.js  main.js  render.js  train.js  utils.js  views.js  ws.js
web/modules/: __init__.py  arquitectura.py  chat.py  comparar.py  datos.py  entrenamiento.py  infraestructura.py  tensores.py  tokenizadores.py  ui.py
(+28 files in other folders)
