[package]
name = "molineteai"
version = "0.1.0"
edition = "2021"
authors = ["Jerónimo Hoyos <jerohoyos1@gmail.com>"]
description = "Implementación educativa en español de un modelo Transformer tipo GPT-2, inspirada en feste, desarrollada desde cero en Rust."
license = "Apache-2.0"
repository = "https://github.com/JeroHoyos/molinete-ai"
keywords = ["machine-learning", "nlp", "transformer", "gpt2", "educational", "rust"]
categories = ["science", "algorithms"]

[dependencies]
rayon = "1.10"
rand = "0.9"
rand_distr = "0.5"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
clap = { version = "4.5", features = ["derive"] }