[package]
name = "molineteai"
version = "0.1.0"
edition = "2021"

[lib]
name = "molineteai"
crate-type = ["cdylib", "rlib"]

[features]
default = []
python = ["pyo3/extension-module"]

[[bin]]
name = "molineteai"
path = "src/main.rs" 

[dependencies]
rayon = "1.10"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
pyo3 = { version = "0.22", features = ["extension-module"], optional = true }
rand = "0.8"
rand_distr = "0.4"

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
