[build-system]
requires = ["maturin>=1.4,<2.0"]
build-backend = "maturin"

[project]
name = "molineteai"
version = "0.1.0"
description = "Implementación educativa de GPT-2 en Rust con bindings para Python"
readme = "README.md"
license = { text = "MIT" }
requires-python = ">=3.9"
keywords = ["llm", "gpt2", "transformer", "nlp", "machine-learning", "educativo"]
classifiers = [
    "Programming Language :: Python :: 3",
    "Programming Language :: Rust",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]

[project.optional-dependencies]
web = [
    "fastapi",
    "uvicorn",
    "python-dotenv",
    "websockets",
]
presentation = [
    "manim>=0.20.0",
    "manim-slides>=5.5.0",
    "manim-code-blocks",
    "scipy",
    "PySide6",
    "manimpango",
    "xlsxwriter",
]

[tool.maturin]
module-name = "molineteai"
features = ["python"]
