[build-system]
requires = ["maturin>=1.4,<2.0"]
build-backend = "maturin"

[project]
name = "molineteai"
version = "0.1.0"
description = "Implementación educativa de GPT-2 en Rust con bindings para Python"
readme = "README.md"
license = { text = "Apache-2.0" }
requires-python = ">=3.11"
keywords = ["llm", "gpt2", "transformer", "nlp", "machine-learning", "educativo"]
classifiers = [
    "Programming Language :: Python :: 3",
    "Programming Language :: Rust",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]

[dependency-groups]
dev = [
    "maturin>=1.4,<2.0",
]
web = [
    "fastapi",
    "uvicorn",
    "python-dotenv",
    "websockets",
]
presentation = [
    "manim>=0.20.0",
    "manim-slides>=5.5.0",
    "manim-code-blocks",
    "scipy",
    "PySide6",
    "manimpango",
    "xlsxwriter",
]

[tool.maturin]
module-name = "molineteai"
features = ["python"]

[tool.uv]
# "uv sync" instala todos los grupos (dev + web + presentation)
default-groups = ["dev", "web", "presentation"]
# Recompilar los bindings cuando cambien las fuentes Rust
cache-keys = [
    { file = "pyproject.toml" },
    { file = "Cargo.toml" },
    { file = "src/**/*.rs" },
]
